--- a/coq-tutorial_material.opam
+++ b/coq-tutorial_material.opam
@@ -18,6 +18,7 @@ description: """
 Scripts associated to tutorials for mathcomp.
 
 It contains
+- [AnIntroductionToSmallScaleReflectionInCoq](https://github.com/math-comp/tutorial_material/blob/master/AnIntroductionToSmallScaleReflectionInCoq) associated to [An Introduction To Small Scale Reflection In Coq](https://hal.inria.fr/inria-00515548v4/document)
 - [AnSsreflectTutorial](https://github.com/math-comp/tutorial_material/blob/master/AnSsreflectTutorial) associated to [An Ssreflect Tutorial](https://hal.inria.fr/inria-00407778)
 - [SummerSchoolSophia](https://github.com/math-comp/tutorial_material/tree/master/SummerSchoolSophia) associated to a [5-day School](https://team.inria.fr/marelle/en/coq-winter-school-2018/) on Mathematical Components at Sophia-Antipolis"""
 
@@ -25,7 +26,7 @@ build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
   "coq" {(>= "8.15")}
-  "coq-mathcomp-ssreflect" {(>= "1.14.0")}
+  "coq-mathcomp-ssreflect" {(>= "1.15.0")}
 ]
 
 tags: [
